--- a/_config.yml
+++ b/_config.yml
@@ -7,10 +7,10 @@
 
 # Site settings
 title: Anyi Rao
-email: your-email@domain.com
+email: raoanyi@qq.com
 description: > # this means to ignore newlines until "baseurl:"
   Thunder is a lightning fast responsive theme based on default Jekyll theme. It is minimal and free from JavaScript. It has a css file of size 5kb. 
-url: "http://webjeda.com" # the base hostname & protocol for your site
+url: "raoanyi" # the base hostname & protocol for your site
 
 baseurl: '/thunder'
 permalink: /:title/
