--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ description: > # this means to ignore newlines until "baseurl:"
   Developed by Anyi
 url: "http://webjeda.com" # the base hostname & protocol for your site
 
-baseurl: '/thunder'
+baseurl: '/raoanyi'
 permalink: /:title/
 
 analytics: UA-83979019-1
