--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title: Anyi Rao
 email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
   Developed by Anyi
-url: "http://webjeda.com" # the base hostname & protocol for your site
+url: "https://softwarelight.github.io/raoanyi/" # the base hostname & protocol for your site
 
 baseurl: '/raoanyi'
 permalink: /:title/
