--- a/_config.yml
+++ b/_config.yml
@@ -7,9 +7,10 @@
 
 # Site settings
 title: Anyi Rao
+email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
   Developed by Anyi
-url: "https://softwarelight.github.io/raoanyi" # the base hostname & protocol for your site
+url: "http://webjeda.com" # the base hostname & protocol for your site
 
 baseurl: '/raoanyi'
 permalink: /:title/
@@ -24,7 +25,7 @@ color-2: '#F0C419'
 # Author pictre 100x100 --> keep it inside img folder.
 author-image: 'author.jpg'
 author-name: 'Anyi Rao'
-  author-about: 'Anyi Rao Come on!' 
+author-about: 'Anyi Rao should be described in a very few words!' 
 
 # Build settings
 markdown: kramdown
