--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ color-2: '#F0C419'
 # Author pictre 100x100 --> keep it inside img folder.
 author-image: 'author.jpg'
 author-name: 'Anyi Rao'
-author-about: 'Anyi Rao should be described in a very few words!' 
+author-about: 'Anyi Rao Come on!' 
 
 # Build settings
 markdown: kramdown
