--- a/_config.yml
+++ b/_config.yml
@@ -23,9 +23,9 @@ color-1: '#E64C3C'
 color-2: '#F0C419' 
 
 # Author pictre 100x100 --> keep it inside img folder.
-author-image: 'author.jpg'
+author-image: 'xinyi.jpg'
 author-name: 'Anyi Rao'
-author-about: 'Anyi Rao Come on!' 
+author-about: 'Enjoy life!' 
 
 # Build settings
 markdown: kramdown
