--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Anyi Rao
+title: Ray Anyi Rao
 email: your-email@domain.com
 # description: > # this means to ignore newlines until "baseurl:"
   
